[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://vids/menu_bg.ogv" type="VideoStream" id=2]
[ext_resource path="res://audio/Sneaky Adventure - Gaming Background Music (HD).wav" type="AudioStream" id=3]
[ext_resource path="res://assets font/ORBITRON-VARIABLEFONT_WGHT.TTF" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.239216, 0.823529, 0.027451, 1 )

[sub_resource type="DynamicFont" id=3]
size = 26
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.992157, 0.709804, 0.266667, 1 )

[sub_resource type="DynamicFont" id=4]
size = 17
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.992157, 0.709804, 0.266667, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.866667, 0, 0, 1 )

[node name="Menu" type="Control"]
anchor_left = 0.000431508
anchor_right = 1.00043
anchor_bottom = 1.0
margin_left = 22.9213
margin_top = -16.6368
margin_right = 22.9214
margin_bottom = -16.6368
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bgvid" type="VideoPlayer" parent="."]
anchor_top = 0.00106125
anchor_right = 1.0
anchor_bottom = 1.00106
margin_left = -20.8396
margin_top = 17.4771
margin_right = -20.8395
margin_bottom = 17.4772
rect_pivot_offset = Vector2( 157.317, 457.527 )
stream = ExtResource( 2 )
autoplay = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.451172
anchor_top = 0.00106127
anchor_right = 0.5
anchor_bottom = 0.00439461
margin_left = -282.37
margin_top = 83.9103
margin_right = 352.63
margin_bottom = 182.91
grow_horizontal = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.792157, 0.647059, 0.215686, 1 )
custom_colors/font_outline_modulate = Color( 0.792157, 0.760784, 0.694118, 1 )
custom_constants/shadow_offset_x = 0
text = "Gluttony or Frugality"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Label"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 49.62
margin_top = 88.68
margin_right = 922.62
margin_bottom = 243.68
grow_horizontal = 0
rect_rotation = -3.4
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Either way we're going to eat!!"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IntroSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="startbutton" type="Button" parent="."]
margin_left = 16.4771
margin_top = 382.294
margin_right = 194.477
margin_bottom = 430.294
focus_neighbour_top = NodePath("../quitbutton")
custom_styles/focus = SubResource( 5 )
custom_fonts/font = SubResource( 3 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ctrlmenubutton" type="Button" parent="."]
margin_left = 25.0
margin_top = 435.0
margin_right = 183.0
margin_bottom = 473.0
rect_pivot_offset = Vector2( 152.279, 49.4982 )
custom_styles/focus = SubResource( 6 )
custom_fonts/font = SubResource( 4 )
text = "Controls"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="howtogamebutton" type="Button" parent="."]
margin_left = 25.0
margin_top = 478.695
margin_right = 183.0
margin_bottom = 516.695
rect_pivot_offset = Vector2( 152.279, 49.4982 )
custom_styles/focus = SubResource( 7 )
custom_fonts/font = SubResource( 4 )
text = "How to Play?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quitbutton" type="Button" parent="."]
margin_left = 33.0
margin_top = 516.695
margin_right = 175.0
margin_bottom = 546.695
rect_pivot_offset = Vector2( 152.279, 49.4982 )
custom_styles/focus = SubResource( 8 )
custom_fonts/font = SubResource( 4 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="finished" from="bgvid" to="." method="_on_bgvid_finished"]
[connection signal="finished" from="IntroSFX" to="." method="_on_IntroSFX_finished"]
[connection signal="pressed" from="startbutton" to="." method="_on_startbutton_pressed"]
[connection signal="pressed" from="ctrlmenubutton" to="." method="_on_ctrlmenubutton_pressed"]
[connection signal="pressed" from="howtogamebutton" to="." method="_on_howtogamebutton_pressed"]
[connection signal="pressed" from="quitbutton" to="." method="_on_quitbutton_pressed"]
